@@ -17,7 +17,9 @@ import java.util.Set;
 
 import javax.inject.Singleton;
 
+import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Multimap;
 import com.google.inject.AbstractModule;
 
 import org.apache.aurora.GuiceUtils;
@@ -81,12 +83,18 @@ public class AppModule extends AbstractModule {
       help = "Allow to pass docker container parameters in the job.")
   private static final Arg<Boolean> ENABLE_DOCKER_PARAMETERS = Arg.create(false);
 
+  @CmdLine(name = "default_docker_parameters",
+      help = "Default docker parameters for any job that does not explicitly declare parameters.")
+  private static final Arg<Multimap<String, String>> DEFAULT_DOCKER_PARAMETERS =
+      Arg.create(ImmutableMultimap.of());
+
   @Override
   protected void configure() {
     bind(ConfigurationManager.class).toInstance(
         new ConfigurationManager(
             ImmutableSet.copyOf(ALLOWED_CONTAINER_TYPES.get()),
-            ENABLE_DOCKER_PARAMETERS.get()));
+            ENABLE_DOCKER_PARAMETERS.get(),
+            DEFAULT_DOCKER_PARAMETERS.get()));
     bind(Thresholds.class)
         .toInstance(new Thresholds(MAX_TASKS_PER_JOB.get(), MAX_UPDATE_INSTANCE_FAILURES.get()));
 
